fix: take button no longer partially hidden under program display

--- a/client/styles/take-button.css
+++ b/client/styles/take-button.css
@@ -1,6 +1,10 @@
 @import './colorscheme.css';
 
-button.take {
+.take-control--container {
+	padding: 0 20px;
+}
+
+.take-control--button {
 	border: transparent;
 	border-radius: 5%;
 	width: 100%;
@@ -9,5 +13,4 @@ button.take {
 	font-size: 3em;
 	background: var(--frame-dark);
 	color: var(--text-main);
-	margin: 0 20px;
 }
